--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -12,7 +12,14 @@
               "description": "public"
             }
           },
-          "additionalAuthenticationProviders": []
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authpostagram62b9bf4d"
+              }
+            }
+          ]
         }
       }
     }
